# loader-v3

./: Cargo.toml  README.md  codama.mjs  idl.json  package.json  pnpm-lock.yaml
.github/workflows/: publish-js-client.yml  publish-rust-client.yml
clients/js/: README.md  _setup.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
program/: Cargo.toml  README.md  idl.json
program/fuzz/: instr-2umKCsBXUjYfvSQ33JqDtxbvg5fgKvFdBPCpMBq3MVux.fix  instr-2umKCsBXUjYfvSQ33JqDtxbvg5fgKvFdBPCpMBq3MVux.json  instr-2uuK7KhLHdkw2S28w1AoatFcB6SdHV2oMuYSVHesY88L.fix  instr-2uuK7KhLHdkw2S28w1AoatFcB6SdHV2oMuYSVHesY88L.json  instr-34rNpRdfgFhpmSb1YxQrjfNaCaWLnchon1VzfV4zPRdQ.fix  instr-34rNpRdfgFhpmSb1YxQrjfNaCaWLnchon1VzfV4zPRdQ.json  instr-3Ewg5n2xiEiJYo5MMP5dgPofDod7rXBxuQTFD4hmvCeq.fix  instr-3Ewg5n2xiEiJYo5MMP5dgPofDod7rXBxuQTFD4hmvCeq.json  instr-3bmFAhkoTmEkntsVkFjU9vK8Gh2jxeJgBvJ93RKqeXYH.fix  instr-3bmFAhkoTmEkntsVkFjU9vK8Gh2jxeJgBvJ93RKqeXYH.json  instr-3cFuRt3M6rZodHoCYr5tC4RWUH7iEjsEn47JWZ9ejpox.fix  instr-3cFuRt3M6rZodHoCYr5tC4RWUH7iEjsEn47JWZ9ejpox.json  instr-3qCo7tBr5nj9Zrtu2EwoAGVSDH1EiiTFiPCfT8gVQsWn.fix  instr-3qCo7tBr5nj9Zrtu2EwoAGVSDH1EiiTFiPCfT8gVQsWn.json  instr-3tDzaJtVjF3Z85M1FAHGLTcVC6s8wyneTvtnQXFDGmKa.fix  instr-3tDzaJtVjF3Z85M1FAHGLTcVC6s8wyneTvtnQXFDGmKa.json  instr-3uRhPBuGNcUWbP6Lt2KtSppDg3g8jkhzbs1f2hHEEgjA.fix  instr-3uRhPBuGNcUWbP6Lt2KtSppDg3g8jkhzbs1f2hHEEgjA.json  instr-3uxgTZuhpvHRj23cMYeSQsVh2YKhVPvtpeXDnFVBxPSb.fix  instr-3uxgTZuhpvHRj23cMYeSQsVh2YKhVPvtpeXDnFVBxPSb.json  (+150 more)
program/src/: entrypoint.rs  error.rs  lib.rs  (+3 more)
scripts/: fix-write-data-prefix.mjs  generate-clients.mjs  utils.mjs
(+183 files in other folders)
