[package]
name = "solana-loader-v3-program-client"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-account = "^2.2.1"
solana-account-info = "^2.2.1"
solana-cpi = "^2.2.1"
solana-decode-error = "^2.2.1"
solana-instruction = "^2.2.1"
solana-program-error = "^2.2.1"
solana-pubkey = { version = "^2.2.1", features = ["curve25519", "borsh"] }
thiserror = "^1.0"
