[package]
name = "solana-loader-v3-program-client"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []

[dependencies]
borsh = "1.0"
solana-account-info = "3.1"
solana-address = { version = "2.2", features = ["borsh", "curve25519"] }
solana-cpi = "3.1"
solana-instruction = "3.2"
solana-program-error = "3.0"
spl-collections = { version = "0.1", features = ["borsh"] }
